--- a/build.xml
+++ b/build.xml
@@ -20,7 +20,7 @@
   ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
   ~ THE SOFTWARE.
   -->
-<project name="rcl" default="build">
+<project name="rcl-main" default="build">
   <property file="build.properties"/>
   <property name="nk4-ant-suite" location="../NK4-Ant-Suite-0_3/"/>
   <property name="rcl.version" value="1.0.0"/>
@@ -158,6 +158,7 @@
       <fileset dir="lib/netkernel/modules/">
         <include name="*.jar"/>
       </fileset>
+      <path refid="clover-path"/>
     </path>
     <xslt classpathref="test-path"
           in="build/modules/urn.org.netkernelroc.lang.rcl.test/etc/system/Tests.xml"
