Added exception handling. Added tests. Code covereage is 90.8%

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+.idea/
+.gitignore
+*~
+*.class
+urn.org.netkernelroc.lang.rcl/org/netkernel/
+configureNetKernel.xml
+*.iml
+XOM/
+.clover/
+.css/
+.img/
+clover/
+codeCoverage/
 /build.properties
 /build/
 /lib/
